@@ -1,5 +1,5 @@
 # TODO optimize me for space
-FROM openjdk:8
+FROM openjdk:11
 
 RUN export DEBIAN_FRONTEND='noninteractive' && \
     apt-get update  && \
@@ -23,7 +23,7 @@ USER abcl
 # Diagnostics for debugging ABCL construction
 #RUN ls -lR ${work}/abcl
 
-RUN echo "java.options=-d64  -XX:+UseG1GC -XshowSettings:vm -Dfile.encoding=UTF-8 -XX:+AggressiveOpts -XX:CompileThreshold=10" > ${work}/abcl/abcl.properties
+RUN cd ${work}/abcl && bash ci/create-abcl-properties.bash openjdk11
 
 RUN cd ${work}/abcl && ant clean && ant abcl
 ENV abcl_exec_path  "${work}/abcl/abcl"
@@ -32,7 +32,7 @@ USER root
 RUN ln -s ${abcl_exec_path} /usr/local/bin/abcl
 
 USER abcl
-CMD [ "/usr/local/bin/abcl" ]
+ENTRYPOINT [ "/usr/local/bin/abcl" ]
 
 
 
